--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.19.0",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.0",
+    "critters": "^0.0.23",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
