--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Modern, mobile-first professional portfolio website",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
