--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next-auth": "^4.24.13",
     "prisma": "^6.19.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
