--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@tiptap/extension-character-count": "^3.12.0",
+    "@tiptap/extension-code-block-lowlight": "^3.12.0",
+    "@tiptap/extension-link": "^3.12.0",
+    "@tiptap/extension-placeholder": "^3.12.0",
+    "@tiptap/react": "^3.12.0",
+    "@tiptap/starter-kit": "^3.12.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.0",
     "critters": "^0.0.23",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.0",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
