--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "prisma": "^6.19.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
