--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,15 @@ DATABASE_URL="file:./dev.db"
 NEXTAUTH_URL="http://localhost:3001"
 NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl-rand-base64-32"
 
+# Resend Email Service (https://resend.com)
+RESEND_API_KEY="re_xxxxxxxxxxxxxxxxxxxxxxxxxx"
+RESEND_FROM_EMAIL="onboarding@resend.dev"  # Resend'den aldığınız email
+CONTACT_EMAIL="your-email@example.com"      # Mesajların gönderileceği email adresiniz
+
+# Cloudinary (Already configured)
+# CLOUDINARY_CLOUD_NAME="your-cloud-name"
+# CLOUDINARY_API_KEY="your-api-key"
+# CLOUDINARY_API_SECRET="your-api-secret"
+
 # Production Database (DirectAdmin)
 # DATABASE_URL="mysql://ogubenn_portfolio_db:Y5PQrq72atdY7KbUjTHj@157.90.129.125:3306/ogubenn_portfolio_db"
