--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hot-toast": "^2.6.0",
+    "resend": "^6.5.2",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
