--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ RESEND_API_KEY="re_xxxxxxxxxxxxxxxxxxxxxxxxxx"
 RESEND_FROM_EMAIL="onboarding@resend.dev"  # Resend'den aldığınız email
 CONTACT_EMAIL="your-email@example.com"      # Mesajların gönderileceği email adresiniz
 
+# Google Analytics 4 (https://analytics.google.com)
+NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"  # GA4 Measurement ID
+
 # Cloudinary (Already configured)
 # CLOUDINARY_CLOUD_NAME="your-cloud-name"
 # CLOUDINARY_API_KEY="your-api-key"
