--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tiptap/extension-placeholder": "^3.12.0",
     "@tiptap/react": "^3.12.0",
     "@tiptap/starter-kit": "^3.12.0",
+    "@vercel/analytics": "^1.6.1",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.0",
